--- a/component2-1.html
+++ b/component2-1.html
@@ -34,7 +34,7 @@
       },
       template: `
         <button v-on:click="count++">
-          カウント {{ count }} 
+          カウント! {{ count }} 
         </button>`
     });
 
