--- a/component3-1.html
+++ b/component3-1.html
@@ -8,8 +8,8 @@
 <body>
     <div id="blog-post-demo" class="demo">
         <blog-post title="Vuejsとの航海"></blog-post>
-        <blog-post title="Vueとの旅"></blog-post>
-        <blog-post title="Vue旅行記"></blog-post>
+        <blog-post title="Vuejsとの旅"></blog-post>
+        <blog-post title="Vuejs旅行記"></blog-post>
     </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@3.2.31/dist/vue.global.js"></script>
